# Steaming

./: .gitignore  Steaming.pro  juegos.cpp  juegos.h  libros.cpp  libros.h  manager.cpp  manager.h  peliculas.cpp  peliculas.h  principal.cpp  principal.h  registro.h  resources.qrc  selectorcuentas.cpp  selectorcuentas.h  videos.cpp  videos.h
Frontend/: chat.cpp  chat.h  conversorrecomendaciones.cpp  conversorrecomendaciones.h  login.cpp  login.h  main.cpp  manager.cpp  manager.h  pantallarecomendaciones.cpp  pantallarecomendaciones.h  recomendacion.h  registro.cpp  registro.h
GuardadoLocal/: AdminDB.pro  admindb.cpp  admindb.h  authwidget.cpp  authwidget.h  debugdialog.cpp  debugdialog.h  main.cpp  usuario.cpp  usuario.h
SistemaRecomendaciones/: ApiChatGpt.cpp  ApiChatGpt.h  ApiLibros.cpp  ApiLibros.h  ApiManagerQt.pro  ApiPeliculas.cpp  ApiPeliculas.h  ApiSteamBiblioteca.cpp  ApiSteamBiblioteca.h  ApiSteamJuegos.cpp  ApiSteamJuegos.h  ApiYoutube.cpp  ApiYoutube.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Juego.h  Libro.h  MainWidget.cpp  MainWidget.h  PaqueteRecomendaciones.h  Pelicula.h  Recomendador.cpp  Recomendador.h  ServiciosApi.cpp  ServiciosApi.h  SolicitudChatGpt.cpp  SolicitudChatGpt.h  Video.h  main.cpp
SistemaRecomendaciones/apis/: README.md  __init__.py  app.py  data_manager.py  services.py
SistemaRecomendaciones/data/: users.sqlite3
debug/: object_script.Steaming.Debug
release/: moc_chat.cpp  moc_juegos.cpp  moc_libros.cpp  moc_login.cpp  moc_manager.cpp  moc_peliculas.cpp  moc_principal.cpp  moc_registro.cpp  moc_videos.cpp  (+1 more)
